[tool.poetry]
name = "yubihsm"
version = "3.0.0.dev0"
description = "Library for communication with a YubiHSM 2 over HTTP or USB."
authors = ["Dain Nilsson <dain@yubico.com>"]
license = "APACHE-2.0"
homepage = "https://developers.yubico.com/YubiHSM2/"
repository = "https://github.com/Yubico/python-yubihsm"
classifiers = [
	"Operating System :: OS Independent",
	"Programming Language :: Python",
	"Development Status :: 5 - Production/Stable",
	"License :: OSI Approved :: Apache Software License",
	"Topic :: Security :: Cryptography",
	"Topic :: Software Development :: Libraries"
]
include = [
  "COPYING",
  "NEWS",
  "README.adoc",
  "tests/",
]

[tool.poetry.dependencies]
python = "^3.7"
cryptography = ">=2.6"
requests = {version = "^2.0", optional = true}
pyusb = {version = "^1.0", optional = true}

[tool.poetry.extras]
http = ["requests"]
usb = ["pyusb"]

[tool.poetry.dev-dependencies]
pytest = "^7.1"
Sphinx = {version = "^7.1", python = ">=3.8"}
sphinx-rtd-theme = {version = "^1.2.2", python = ">=3.8"}
sphinx-autodoc-typehints = {version = "^1.2.4", python = ">=3.8"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
