[project]
name = "yubihsm"
version = "3.1.1.dev0"
description = "Library for communication with a YubiHSM 2 over HTTP or USB."
authors = [{ name = "Dain Nilsson", email = "<dain@yubico.com>" }]
readme = "README.adoc"
requires-python = ">=3.9"
license = { file = "COPYING" }
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: Apache Software License",
  "Topic :: Security :: Cryptography",
  "Topic :: Software Development :: Libraries"
]
dependencies = ["cryptography (>=2.6, <47)"]

[project.optional-dependencies]
http = ["requests (>=2.0, <3.0)"]
usb = ["pyusb (>=1.0, <2.0)"]

[project.urls]
Homepage = "https://developers.yubico.com/YubiHSM2/"
Repository = "https://github.com/Yubico/python-yubihsm"

[tool.poetry]
include = [
  { path = "COPYING", format = "sdist" },
  { path = "NEWS", format = "sdist" },
  { path = "README.adoc", format = "sdist" },
  "tests/",
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
Sphinx = {version = "^8.1", python = ">=3.10"}
sphinx-rtd-theme = {version = "^3.0.1", python = ">=3.10"}
sphinx-autoapi = {version = "^3.3.3", python = ">=3.10"}

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
