[project]
name = "yubihsm"
version = "3.1.1.dev0"
description = "Library for communication with a YubiHSM 2 over HTTP or USB."
authors = [{ name = "Dain Nilsson", email = "<dain@yubico.com>" }]
readme = "README.adoc"
requires-python = ">=3.9"
license = { file = "COPYING" }
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: Apache Software License",
  "Topic :: Security :: Cryptography",
  "Topic :: Software Development :: Libraries"
]
dependencies = ["cryptography (>=2.6, <47)"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "sphinx>=8.1.3 ; python_full_version >= '3.10'",
    "sphinx-autoapi>=3.6.0 ; python_full_version >= '3.10'",
    "sphinx-rtd-theme>=3.0.2 ; python_full_version >= '3.10'",
]

[project.optional-dependencies]
http = ["requests (>=2.0, <3.0)"]
usb = ["pyusb (>=1.0, <2.0)"]

[project.urls]
Homepage = "https://developers.yubico.com/YubiHSM2/"
Repository = "https://github.com/Yubico/python-yubihsm"

[tool.poetry]
include = [
  { path = "COPYING", format = "sdist" },
  { path = "NEWS", format = "sdist" },
  { path = "README.adoc", format = "sdist" },
  "tests/",
]

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint]
select = ["I", "S"]
exclude = ["tests/*"]